# monorepo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  devcontainer.json  environment.yml  pyproject.toml  train.py
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  deploy-mesop.yml  deploy-rag-server.yml  pre-commit.yml
data/: ultrachat_small.jsonl
projects/: README.md
projects/graph/: README.md
projects/llm/: README.md  train.py
projects/llm/data/: ultrachat_small.jsonl
projects/llm/trainer/: data.py
projects/llm_eval/: README.md  eval_llama31.sh  eval_mmlu_local.py  eval_mmlupro_api.py  eval_mmlupro_api.sh  eval_mmlupro_local.py  merge_summary.py  mmlu_eval_llama31.sh
projects/llm_eval/lm_eval_harness/: custom_mmlu.sh  harness_guide.md
projects/llm_eval/lm_eval_harness/custom/: _mmlu_custom.yaml  _mmlu_custom_template_yaml  mmlu_astronomy.yaml  mmlu_computer_security.yaml  utils.py
projects/llm_eval/offsetbias/: batch_inference.sh  inference.py  prompt.yaml  utils.py  vllm_inference.py
projects/rag/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
projects/rag/client/: index.html
projects/rag/client/static/: ab_test.html  app.js  botNames.json
projects/rag/config_yaml/: base.yaml  hf.yaml
projects/rag/notebook/: preprocess.ipynb  vector_db.ipynb
projects/rag/server/: Dockerfile  main.py  pyproject.toml  server.py  utils.py
projects/rag/server/chains/: __init__.py  advanced_rag.py  base.py  c_rag.py  datamodels.py  self_rag.py
projects/rag/server/llms/: __init__.py  llama.py  solar.py
projects/rag/server/open_data/: character_relationship.json  harry_relationship.txt  harry_story.json  harry_story.txt
projects/rag/server/open_data/harry_story_db/: index.faiss  index.pkl
projects/rag/server/retrievers/: __init__.py  base.py  bm25.py  metadata.py  prompt_search.py
projects/rag/server/tests/: test_server.py
projects/rag/server/tests/chains/: test_advanced_rag.py  test_base.py
projects/rag/server/tests/llms/: test_llama.py  test_solar.py
projects/rag/server/tests/retrievers/: test_base.py  test_bm25.py  test_metadata.py
projects/rag/source/: generator.py  preprocess.py  retreiver.py  utils.py  vector_db.py
projects/rag/static/: app.js  style.css
projects/rl/: README.md  example.py  requirements.txt
projects/rl/configs/: trainer.yaml
projects/rl/configs/nn/: nn.yaml
projects/rl/configs/ppo/: ppo.yaml
projects/rl/modules/: ppo_trainer.py  utils.py
projects/rl/modules/networks/: actor_critic_agnostic.py  actor_critic_specific.py  mlp.py
projects/rl/pytorch/: main.py  setup.py
projects/rl/pytorch/configs/: trainer.yaml
projects/rl/pytorch/configs/nn/: nn.yaml
projects/rl/pytorch/configs/ppo/: ppo.yaml
projects/rl/pytorch/modules/: ppo_agent.py  ppo_trainer.py  utils.py
projects/rl/pytorch/modules/networks/: actor_critic_agnostic.py  actor_critic_specific.py  mlp.py
scripts/: setup.sh
src/: eval.py  train.py
src/trainer/: mamba_trainer.py
trainer/: data.py  mamba_trainer.py
