[tool.poetry]
name = "rag"
version = "0.1.0"
description = "rag repository requirements"
authors = ["jjonhwa <jjonhwa@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.4"
mesop = "^0.9.4"
langchain-openai = "^0.1.17"
langchain-huggingface = "^0.0.3"
langchain-community = "^0.2.7"
faiss-cpu = "^1.8.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
ruff = "^0.5.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
