[tool.poetry]
name = "rag"
version = "0.1.0"
description = "rag repository requirements"
authors = [
    "jjonhwa",
    "jun048098",
    "kyhoon",
    "Seonu-Lim",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
faiss-cpu = "^1.8.0.post1"
fastapi = "^0.112.1"
kiwipiepy = "^0.18.0"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
langgraph = "^0.2.12"
python-dotenv = "^1.0.1"
rank-bm25 = "^0.2.2"
rich = "^13.7.1"
typer = "^0.12.3"
typing-extensions = "^4.12.2"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
pre-commit = "^3.7.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
ruff = "0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
